@@ -13,6 +13,7 @@ SVN
                 Handle read errors on sysfs
                 Decode voltage interface level of DDR SDRAM
   decode-xeon: Delete
+  eepromer: Fix array initialization overrun
   i2c-stub-from-dump: Use udev settle to speed up initialization
 
 3.0.2 (2008-11-29)
